# openph

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
openph.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: __init__.py  openph_model.py
src/attributes/: __init__.py  base.py  registry.py
src/model/: climate.py  components.py  constants.py  constructions.py  enums.py  ihg.py  rooms.py
src/model/hvac/: hot_water.py  hvac.py
src/model/loads/: infiltration.py  ventilation.py
src/model/programs/: ventilation.py
src/model/schedules/: occupancy.py
src/openph.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/openph/attributes/: __init__.py  manager.py  registry.py
src/openph/model/: areas.py  envelope.py  settings.py
src/openph/model/hvac/: ventilation_device.py  ventilation_system.py
src/openph/model/schedules/: collection.py  ventilation.py
src/openph/solvers/: __init__.py  registry.py
src/solvers/: base.py  manager.py
tests/: test_attribute_base.py  test_attribute_manager.py  test_attribute_registry.py  test_openph_model.py  test_solver_base.py  test_solver_manager.py  test_solver_registry.py
